Fixed game spacing i think...

--- a/gamez.css
+++ b/gamez.css
@@ -2,23 +2,41 @@ html,
 body {
     width: 100%;
     height: 100%;
-    overflow: hidden;
-    /* Prevent scrollbars */
     display: flex;
     flex-direction: column;
 }
 
 main {
-    text-align: center;
     flex: 1;
-    /* Takes up remaining space */
     display: flex;
     justify-content: center;
     align-items: center;
     position: relative;
 }
 
-.firstBlock img {
+.game-container {
+    position: absolute;
+    width: 600px;
+    height: 800px;
+    transform-origin: top center;
+    top: 0;
+    transform: scale(1);
+    overflow: hidden;
+}
+
+iframe {
+    width: 100%;
+    height: 100%;
+    border: none;
+}
+
+@keyframes scaleSlow {
+    50% {
+        font-size: 1.3em;
+    }
+}
+
+/* .firstBlock img {
     display: inline-block;
 }
 
@@ -50,40 +68,4 @@ main {
 
 .bottomBlock p {
     display: inline;
-}
-
-.game-wrapper {
-    position: relative;
-    width: 600px;
-    /* Original game width */
-    height: 800px;
-    /* Original game height */
-}
-
-.game-container {
-    width: 100%;
-    height: 100%;
-    transform-origin: top center;
-    position: absolute;
-    top: 0;
-    transform: scale(1);
-}
-
-iframe {
-    width: 100%;
-    height: 100%;
-    border: none;
-}
-
-/* Responsive scaling */
-@media (max-width: 768px) {
-    .game-container {
-        left: -20%;
-    }
-}
-
-@keyframes scaleSlow {
-    50% {
-        font-size: 1.3em;
-    }
-}
+}*/
